Fix the hover collapse icon for products page metaboxes
git-svn-id: https://plugins.svn.wordpress.org/wp-e-commerce/branches/3.8-development@316874 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpsc-admin/css/admin.css
+++ b/wpsc-admin/css/admin.css
@@ -1376,7 +1376,7 @@ a.variation_handle {
 	display:none;
 } 
 .meta-box-sortables-wpec .postbox:hover .handlediv {
-	background: transparent url(../../images/menu-bits.gif) no-repeat scroll 0% -111px;
+	background: transparent url(../../wpsc-core/images/menu-bits.gif) no-repeat scroll 0% -111px;
 }
 /* Main Flora Style Sheet for jQuery UI ui-datepicker */
 #ui-datepicker-div, .ui-datepicker-inline {
